--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.3
-stripe==5.4.0
-python-dotenv==1.0.0
+Flask==3.0.2
+Flask-Session==0.5.0
+python-dotenv==1.0.1
+stripe==8.5.0
 gunicorn==21.2.0
-flask-session==0.4.0
